<resources>
    <string name="app_name">MyApplication1</string>
    <string name="action_settings">Settings</string>

    <string name="initText">http://www.google.com</string>
    <string name="getPageButton">GET PAGE</string>

    <string name="sUrl">Url:</string>
    <string name="sHash">Hash:</string>
    <string name="sLocation">Location:</string>

    <string name="sUrlValue" />
    <string name="sHashValue" />
    <string name="sLocationValue" />

</resources>
